--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sprint.css">
     <title>Acudits</title>
 </head>
 
 <body>
     <div>
         <h1>Acudits</h1>
-        <button id="nextJoke" type="button">Next Joke</button>
         <p id="printJoke"></p>
+        <button id="nextJoke" type="button">Next Joke</button>
+
+
+        <label for="ratingJokes">How funny was the joke?</label><br>
+
+
+        <button class="score1">Didn`t blink</button>
+        <button class="score2">Smiled</button>
+        <button class="score3">LOL!</button>
+
+        <p id="peticion"></p>
     </div>
 
 
