Empezando chuck norris

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <div>
+        <span id="forecast"></span>
+    </div>
+    <div>
         <h1>Acudits</h1>
         <p id="printJoke"></p>
         <button id="nextJoke" type="button">Next Joke</button>
