--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <span id="forecast"></span>
+        <p id="forecast"></p>
     </div>
     <div>
         <h1>Acudits</h1>
