--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sprint.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Acudits</title>
 </head>
 
@@ -15,16 +17,19 @@
     </div>
     <div>
         <h1>Acudits</h1>
-        <p id="printJoke"></p>
-        <button id="nextJoke" type="button">Next Joke</button>
+        <img class="img-fluid" src="img/background_jokes.svg" alt="">
+        <div class="backgroundJoke">
+            <p id="printJoke"></p>
+            <button id="nextJoke" class="btn bg-primary text-warning" type="button">Next Joke</button>
+        </div>
 
 
         <label for="ratingJokes">How funny was the joke?</label><br>
 
 
-        <button class="score1">Didn`t blink</button>
-        <button class="score2">Smiled</button>
-        <button class="score3">LOL!</button>
+        <button class="score1  rounded-pill btn-warning btn-outline-secondary ">Didn`t blink</button>
+        <button class="score2  rounded-pill btn-warning btn-outline-secondary ">Smiled</button>
+        <button class="score3  rounded-pill btn-warning btn-outline-secondary ">LOL!</button>
 
         <p id="peticion"></p>
     </div>
@@ -32,9 +37,10 @@
 
 
 
-    <script src="sprint.js">
+    <script src="sprint.js"
+        src="sprint.js,https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js ">
 
-    </script>
+        </script>
 </body>
 
 </html>
