--- a/index.html
+++ b/index.html
@@ -12,28 +12,32 @@
 </head>
 
 <body>
-    <div>
-        <p id="forecast"></p>
-    </div>
-    <div>
-        <h1>Acudits</h1>
-        <img class="img-fluid" src="img/background_jokes.svg" alt="">
-        <div class="backgroundJoke">
-            <p id="printJoke"></p>
-            <button id="nextJoke" class="btn bg-primary text-warning" type="button">Next Joke</button>
+    <div class="fondoVerde ">
+        <div class="nube position-absolute top-0 start-0">
+            <p id="forecast"></p>
         </div>
+        <div>
+            <h1>Acudits</h1>
+
+            <div class="backgroundJoke">
+                <div>
+                    <p id="printJoke"></p>
+                    <button id="nextJoke" class="btn bg-primary text-warning" type="button">Next Joke</button>
+                </div>
 
 
-        <label for="ratingJokes">How funny was the joke?</label><br>
+                <label for="ratingJokes">How funny was the joke?</label><br>
 
 
-        <button class="score1  rounded-pill btn-warning btn-outline-secondary ">Didn`t blink</button>
-        <button class="score2  rounded-pill btn-warning btn-outline-secondary ">Smiled</button>
-        <button class="score3  rounded-pill btn-warning btn-outline-secondary ">LOL!</button>
+                <button class="score1  rounded-pill btn-warning btn-outline-secondary ">Didn`t blink</button>
+                <button class="score2  rounded-pill btn-warning btn-outline-secondary ">Smiled</button>
+                <button class="score3  rounded-pill btn-warning btn-outline-secondary ">LOL!</button>
 
-        <p id="peticion"></p>
-    </div>
 
+            </div>
+            <p id="peticion"></p>
+        </div>
+    </div> <!-- FondoVerde ************** -->
 
 
 
