--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="nube position-absolute top-0 start-0">
             <p id="forecast"></p>
         </div>
+        <img src="img/lol.png" class="lolFace lol1" alt="">
+        <img src="img/lol2.png" class="lolFace lol2 " alt="">
+        <img src="img/lol.png" class="lolFace lol3" alt="">
+        <img src="img/lol2.png" class="lolFace lol4" alt="">
         <div>
             <h1>Acudits</h1>
 
