--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <div class="fondoVerde ">
-        <div class="nube position-absolute top-0 start-0">
+    <div id="blob" class="blob4">
+        <div id="iconoMeteo" class="">
             <p id="forecast"></p>
         </div>
-        <img src="img/lol.png" class="lolFace lol1" alt="">
+
         <img src="img/lol2.png" class="lolFace lol2 " alt="">
         <img src="img/lol.png" class="lolFace lol3" alt="">
         <img src="img/lol2.png" class="lolFace lol4" alt="">
